internal/buf/cmd/buf/testdata/workspace/success/dir/buf.work
version: v1beta1
directories:
  - other/proto
  - proto
