internal/buf/cmd/buf/testdata/workspace/fail/overlap/buf.work
version: v1beta1
directories:
  - proto
